--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,21 +3,17 @@
   {
    "cell_type": "markdown",
    "id": "830b69ce-1ac2-4210-a5b0-0aad1d737950",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "781e9027-7c8c-4188-a7ac-a4cb9b9305af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa228e57-6149-418a-91dc-e9409315034d",
+   "id": "9f6afe4f-e289-4867-9fcc-03e5773eece8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -25,15 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4e6a962-49ed-4bc2-920c-253ec064ac17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a968093a-7204-4515-b011-ed80e3e133bd",
+   "id": "35a2ba2e-f8a2-4729-9604-6b3a414d4c03",
    "metadata": {},
    "outputs": [],
    "source": []
