Initial groups of where code goes
Not strict, hope this reduces nerge conflicts in the future

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,12 +3,10 @@
   {
    "cell_type": "markdown",
    "id": "830b69ce-1ac2-4210-a5b0-0aad1d737950",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "source": []
+   "metadata": {},
+   "source": [
+    "Excel things"
+   ]
   },
   {
    "cell_type": "code",
@@ -22,6 +20,86 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "35a2ba2e-f8a2-4729-9604-6b3a414d4c03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b4b9ab2-adca-4282-80d3-b28fa13fb7bc",
+   "metadata": {},
+   "source": [
+    "Algo for sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dcda656-0400-49ce-a8d7-7c12e8191cf3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d192e7ce-87e7-4ee8-8723-87dbb37385cb",
+   "metadata": {},
+   "source": [
+    "Diveristy score things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c70dc59b-07a3-4314-870f-8bae9b64a2af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d72a4d7a-2a77-48dc-b97e-f13cdc6fb2bf",
+   "metadata": {},
+   "source": [
+    "Getting it back into an excel file and things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23d756f7-8f7b-474e-a291-5b574aee7b25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72e04807-b86c-45f3-9fd8-df44698e9b88",
+   "metadata": {},
+   "source": [
+    "Graphical plots and things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6eb9efe-9847-49fc-8aff-9764d084d1b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d30017e2-afbf-4192-ba46-6d54bfe0e7ac",
+   "metadata": {},
+   "source": [
+    "Debug test things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3f5d9bd-74ea-4289-b7b1-18330f276d50",
    "metadata": {},
    "outputs": [],
    "source": []
