Add more to algo evaluation / diversity scoring
Finding mode of School and Gender in a group
Finding mean, range, midrange of CGPA in a group

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -112,8 +112,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "367bb4e3-c8e2-48ab-ab46-8897c6ba43ec",
+   "metadata": {},
+   "source": [
+    "## Basic Factors\n",
+    "No majority of students of the same following factors:\n",
+    "1. School\n",
+    "2. Gender\n",
+    "3. Current CGPA\n",
+    "\n",
+    "General flow:\n",
+    "TODO: insert flowchart\n",
+    "- For each tutorial group, check for a single factor first, to find the group with the least diversity\n",
+    "- Then rank them to see with tutorial group has a group with the least diversity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6621cf19-f6f4-455a-8de7-0faab6c23a4f",
+   "metadata": {},
+   "source": [
+    "### Finding the diversity of a single factor of a single group\n",
+    "Required data: list of students in the group, required factor of the student\n",
+    "<br>\n",
+    "Output: The number for diversity\n",
+    "<br>\n",
+    "Start with finding the number of occurences of each factor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "264edb32-8df7-4c34-81dc-0825f5f1460a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters:\n",
+    "#  factor: string of factor to check, same as the key in the dictionary\n",
+    "#  groupData: data needed as a list of dictionaries\n",
+    "# Return:\n",
+    "#  occurences: dictionary of {factor1: numOccurences, factor2: numOccurences ... } as string:int\n",
+    "def FindOccurencesInGroup(factor, groupData : list):\n",
+    "    size = len(groupData)\n",
+    "    occurences = {} # Dictionary to keep track of occurences of each factor\n",
+    "    for i in groupData:\n",
+    "        for studentData in i.values():\n",
+    "            schoolOfStudent = studentData[factor]\n",
+    "            # If factor already exists in occurences, add 1 to it, otherwise create it and set to 1\n",
+    "            if schoolOfStudent in occurences.keys():\n",
+    "                occurences[schoolOfStudent] += 1\n",
+    "            else:\n",
+    "                occurences[schoolOfStudent] = 1\n",
+    "    return occurences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b1a0a5-dddb-41e1-9686-e60eca5ade96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testGroupData = [\n",
+    "    {71 : {\"TG\" : \"G-1\", \"School\" : \"SoH\", \"Name\" : \"Savannah Taylor\", \"Gender\" : False, \"CGPA\" : 4.19}},\n",
+    "    {75 : {\"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Sakina Ahmed\", \"Gender\" : False, \"CGPA\" : 4.03}},\n",
+    "    {162 : {\"TG\" : \"G-1\", \"School\" : \"SSS\", \"Name\" : \"Lila Patel\", \"Gender\" : False, \"CGPA\" : 4.07}},\n",
+    "    {235 : {\"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Ming Zhang\", \"Gender\" : True, \"CGPA\" : 4.06}},\n",
+    "    {288 : {\"TG\" : \"G-1\", \"School\" : \"CoB (NBS)\", \"Name\" : \"Ajay Verma\", \"Gender\" : True, \"CGPA\" : 4.01}}\n",
+    "]\n",
+    "# testGroupData = [\n",
+    "#     {\"Student ID\": 71, \"TG\" : \"G-1\", \"School\" : \"SoH\", \"Name\" : \"Savannah Taylor\", \"Gender\" : False, \"CGPA\" : 4.19},\n",
+    "#     {\"Student ID\": 75, \"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Sakina Ahmed\", \"Gender\" : False, \"CGPA\" : 4.03},\n",
+    "#     {\"Student ID\": 162, \"TG\" : \"G-1\", \"School\" : \"SSS\", \"Name\" : \"Lila Patel\", \"Gender\" : False, \"CGPA\" : 4.07},\n",
+    "#     {\"Student ID\": 235, \"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Ming Zhang\", \"Gender\" : True, \"CGPA\" : 4.06},\n",
+    "#     {\"Student ID\": 288, \"TG\" : \"G-1\", \"School\" : \"CoB (NBS)\", \"Name\" : \"Ajay Verma\", \"Gender\" : True, \"CGPA\" : 4.01}\n",
+    "# ]\n",
+    "print(FindOccurencesInGroup(\"School\", testGroupData))\n",
+    "print(FindOccurencesInGroup(\"Gender\", testGroupData))\n",
+    "print(FindOccurencesInGroup(\"CGPA\", testGroupData))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39fb02de-4dab-4d11-b30d-62e7abc387ba",
+   "metadata": {},
+   "source": [
+    "#### Then find the most number of occurences out of the total students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0ac0a1d-643a-4317-bf73-0897691b7c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summary: returns the key and value of the key with the largest value\n",
+    "# Parameters:\n",
+    "#  dictionary: the dict to find the max of\n",
+    "# Return:\n",
+    "#  key : list, values : int, where key is the key with highest value\n",
+    "def FindMaxInDict(dictionary: dict):\n",
+    "    maxKeys = []\n",
+    "    maxVal = 0\n",
+    "    for key, value in dictionary.items():\n",
+    "        # update maxKeys and maxVal whenever a new value >= current maxVal\n",
+    "        if value > maxVal:\n",
+    "            maxKeys = key\n",
+    "            maxVal = value\n",
+    "        elif value == maxVal:\n",
+    "            maxKeys += key\n",
+    "    return maxKeys, maxVal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "966c82e5-7d2c-4176-9650-e7935949222c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(FindMaxInDict(FindOccurencesInGroup(\"School\", testGroupData)))\n",
+    "print(FindMaxInDict(FindOccurencesInGroup(\"Gender\", testGroupData)))\n",
+    "print(FindMaxInDict(FindOccurencesInGroup(\"CGPA\", testGroupData)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "535dea59-6582-4a07-8968-2636101a2978",
+   "metadata": {},
+   "source": [
+    "## CGPA case\n",
+    "But this does not work for CGPA, for that we want to find the mean, range, and midrange instead\n",
+    "If we use only mean, a majority of high CGPA with a very low CGPA will result in a medium CGPA, this can be solved by looking at midrange, where a high difference between midrange and mean will show that this is happening\n",
+    "However, even with these two, a group will all medium CGPAs will also result in medium mean, and low midrange difference, therefore we add range to determine that this is happening if the range is small.\n",
+    "In conclusion, the result we are looking for is one with an medium mean, high range, and low difference between midrange and mean.\n",
+    "### Finding mean and range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "119b3209-161a-497e-9ecb-df7deee7219a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Mean(*nums):\n",
+    "    if len(nums) == 1 and type(nums[0]) is list:\n",
+    "        nums = nums[0]\n",
+    "    return sum(nums) / len(nums)\n",
+    "\n",
+    "def Range(*nums):\n",
+    "    if len(nums) == 1 and type(nums[0]) is list:\n",
+    "        nums = nums[0]\n",
+    "    return max(nums) - min(nums)\n",
+    "\n",
+    "def Midrange(*nums):\n",
+    "    if len(nums) == 1 and type(nums[0]) is list:\n",
+    "        nums = nums[0]\n",
+    "    return (max(nums) + min(nums)) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd31556f-4d90-45f6-93bb-25f139204b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testList = [4.19, 4.03, 4.07, 4.06, 4.01]\n",
+    "print(Mean(testList))\n",
+    "print(Range(testList))\n",
+    "print(Midrange(testList))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c70dc59b-07a3-4314-870f-8bae9b64a2af",
    "metadata": {},
    "outputs": [],
@@ -121,14 +297,6 @@
     "# Weights\n",
     "CRITERA_WEIGHTS = {\"CGPA\": 100, \"SCHOOL\": 100, \"GENDER\": 100}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23d756f7-8f7b-474e-a291-5b574aee7b25",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
