--- a/Main.ipynb
+++ b/Main.ipynb
@@ -66,18 +66,95 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f6afe4f-e289-4867-9fcc-03e5773eece8",
+   "id": "65866e7d-e55b-4886-832e-1500568af55b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "file = original excel file\n",
+    "rawFileData = giant list where each item is a row converted into a single string\n",
+    "fileHeader = first row \"Tutorial Group,Student ID,School,Name,Gender,CGPA\"\n",
+    "fileData = each row in the file turned into a list of cells as strings\n",
+    "studentData = list of dictionaries, each representing a student's data ('student ID', 'TG', 'School', 'Name', 'Gender', 'CGPA')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "9f6afe4f-e289-4867-9fcc-03e5773eece8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['G-1', '5002', 'CCDS', 'Aarav Singh', 'Male', '4.02']\n",
+      "Tutorial Group,Student ID,School,Name,Gender,CGPA\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open(\"records.csv\", \"r\")\n",
+    "rawFileData = file.readlines()\n",
+    "fileData = []\n",
+    "fileHeader = rawFileData.pop(0) #string of first line\n",
+    "for i in rawFileData:\n",
+    "    i = i.split(\",\")\n",
+    "    i[5] = i[5].replace('\\n', '')\n",
+    "    fileData.append(i)\n",
+    "\n",
+    "print(fileData[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "35a2ba2e-f8a2-4729-9604-6b3a414d4c03",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#global variables\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2da36bad-c475-4c8d-8762-903eb992df7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initStudents():      #creates studentData, a list of dictionaries, each representing a student\n",
+    "    studentData = []\n",
+    "    studentCount = 0\n",
+    "    for row in fileData:\n",
+    "        studentCount += 1\n",
+    "        if row[4] == 'Male':\n",
+    "            gender = True\n",
+    "        elif row[4] == 'Female':\n",
+    "            gender = False\n",
+    "        studentData.append({'Student ID': int(row[1]),'TG': row[0], 'School': row[2], 'Name': row[3], 'Gender': gender, 'CGPA': float(row[5])})\n",
+    "    return studentData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "258d4f1c-3dea-48f1-99c0-d4f0a3131e6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Student ID': 5002, 'TG': 'G-1', 'School': 'CCDS', 'Name': 'Aarav Singh', 'Gender': True, 'CGPA': 4.02}\n"
+     ]
+    }
+   ],
+   "source": [
+    "studentData = initStudents()\n",
+    "print(studentData[0])\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,6 +178,20 @@
    "metadata": {},
    "source": [
     "# Getting it back into an excel file and things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "239672c9-933d-4b99-8d3e-6538fc3d007f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testfile = open(\"testrecords.csv\", \"w\")\n",
+    "fileData[0].append('AAAAAAAH')\n",
+    "for i in range(len(fileData)):\n",
+    "    fileData[i] = ','.join(fileData[i])\n",
+    "    print(fileData[i], file = testfile, end = '\\n')\n"
    ]
   },
   {
@@ -373,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
