--- a/Main.ipynb
+++ b/Main.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "9f6afe4f-e289-4867-9fcc-03e5773eece8",
    "metadata": {},
    "outputs": [
@@ -88,9 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['G-1', '5002', 'CCDS', 'Aarav Singh', 'Male', '4.02']\n",
-      "Tutorial Group,Student ID,School,Name,Gender,CGPA\n",
-      "\n"
+      "['G-1', '5002', 'CCDS', 'Aarav Singh', 'Male', '4.02']\n"
      ]
     }
    ],
@@ -98,18 +96,18 @@
     "file = open(\"records.csv\", \"r\")\n",
     "rawFileData = file.readlines()\n",
     "fileData = []\n",
-    "fileHeader = rawFileData.pop(0) #string of first line\n",
     "for i in rawFileData:\n",
     "    i = i.split(\",\")\n",
     "    i[5] = i[5].replace('\\n', '')\n",
     "    fileData.append(i)\n",
+    "fileHeader = fileData.pop(0) #list of cells from first line\n",
     "\n",
     "print(fileData[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "35a2ba2e-f8a2-4729-9604-6b3a414d4c03",
    "metadata": {},
    "outputs": [],
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "2da36bad-c475-4c8d-8762-903eb992df7f",
    "metadata": {},
    "outputs": [],
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "258d4f1c-3dea-48f1-99c0-d4f0a3131e6b",
    "metadata": {},
    "outputs": [
@@ -182,14 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "239672c9-933d-4b99-8d3e-6538fc3d007f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Tutorial Group', 'Student ID', 'School', 'Name', 'Gender', 'CGPA']\n",
+      "['G-1', '5002', 'CCDS', 'Aarav Singh', 'Male', '4.02', '', 'AAAAAAAH']\n"
+     ]
+    }
+   ],
    "source": [
     "testfile = open(\"testrecords.csv\", \"w\")\n",
-    "fileData[0].append('AAAAAAAH')\n",
-    "for i in range(len(fileData)):\n",
+    "fileHeader = fileHeader\n",
+    "fileData.insert(0, fileHeader) #puts back header line\n",
+    "fileData[1].append('')\n",
+    "fileData[1].append('AAAAAAAH')\n",
+    "print(fileData[0])\n",
+    "print(fileData[1])\n",
+    "for i in range(len(fileData)):  #for each list, join items by ','. Then prints each line into new excel sheet\n",
     "    fileData[i] = ','.join(fileData[i])\n",
     "    print(fileData[i], file = testfile, end = '\\n')\n"
    ]
