--- a/Main.ipynb
+++ b/Main.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "264edb32-8df7-4c34-81dc-0825f5f1460a",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
     "#  groupData: data needed as a list of dictionaries\n",
     "# Return:\n",
     "#  occurences: dictionary of {factor1: numOccurences, factor2: numOccurences ... } as string:int\n",
-    "def FindOccurencesInGroup(factor, groupData : list):\n",
+    "def FindOccurencesInGroup(factor, groupData : list) -> dict:\n",
     "    size = len(groupData)\n",
     "    occurences = {} # Dictionary to keep track of occurences of each factor\n",
     "    for i in groupData:\n",
@@ -169,10 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "33b1a0a5-dddb-41e1-9686-e60eca5ade96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'SoH': 1, 'CCDS': 2, 'SSS': 1, 'CoB (NBS)': 1}\n",
+      "{False: 3, True: 2}\n",
+      "{4.19: 1, 4.03: 1, 4.07: 1, 4.06: 1, 4.01: 1}\n"
+     ]
+    }
+   ],
    "source": [
     "testGroupData = [\n",
     "    {71 : {\"TG\" : \"G-1\", \"School\" : \"SoH\", \"Name\" : \"Savannah Taylor\", \"Gender\" : False, \"CGPA\" : 4.19}},\n",
@@ -203,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d0ac0a1d-643a-4317-bf73-0897691b7c0d",
    "metadata": {},
    "outputs": [],
@@ -213,25 +223,35 @@
     "#  dictionary: the dict to find the max of\n",
     "# Return:\n",
     "#  key : list, values : int, where key is the key with highest value\n",
-    "def FindMaxInDict(dictionary: dict):\n",
+    "def FindMaxInDict(dictionary: dict) -> (list, int):\n",
     "    maxKeys = []\n",
     "    maxVal = 0\n",
     "    for key, value in dictionary.items():\n",
     "        # update maxKeys and maxVal whenever a new value >= current maxVal\n",
     "        if value > maxVal:\n",
-    "            maxKeys = key\n",
+    "            maxKeys = [key]\n",
     "            maxVal = value\n",
     "        elif value == maxVal:\n",
-    "            maxKeys += key\n",
+    "            maxKeys.append(key)\n",
     "    return maxKeys, maxVal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "966c82e5-7d2c-4176-9650-e7935949222c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(['CCDS'], 2)\n",
+      "([False], 3)\n",
+      "([4.19, 4.03, 4.07, 4.06, 4.01], 1)\n"
+     ]
+    }
+   ],
    "source": [
     "print(FindMaxInDict(FindOccurencesInGroup(\"School\", testGroupData)))\n",
     "print(FindMaxInDict(FindOccurencesInGroup(\"Gender\", testGroupData)))\n",
@@ -248,27 +268,27 @@
     "If we use only mean, a majority of high CGPA with a very low CGPA will result in a medium CGPA, this can be solved by looking at midrange, where a high difference between midrange and mean will show that this is happening\n",
     "However, even with these two, a group will all medium CGPAs will also result in medium mean, and low midrange difference, therefore we add range to determine that this is happening if the range is small.\n",
     "In conclusion, the result we are looking for is one with an medium mean, high range, and low difference between midrange and mean.\n",
-    "### Finding mean and range"
+    "### Finding mean, midrange, and range"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "119b3209-161a-497e-9ecb-df7deee7219a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Mean(*nums):\n",
+    "def Mean(*nums) -> float:\n",
     "    if len(nums) == 1 and type(nums[0]) is list:\n",
     "        nums = nums[0]\n",
     "    return sum(nums) / len(nums)\n",
     "\n",
-    "def Range(*nums):\n",
+    "def Range(*nums) -> float:\n",
     "    if len(nums) == 1 and type(nums[0]) is list:\n",
     "        nums = nums[0]\n",
     "    return max(nums) - min(nums)\n",
     "\n",
-    "def Midrange(*nums):\n",
+    "def Midrange(*nums) -> float:\n",
     "    if len(nums) == 1 and type(nums[0]) is list:\n",
     "        nums = nums[0]\n",
     "    return (max(nums) + min(nums)) / 2"
@@ -276,16 +296,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cd31556f-4d90-45f6-93bb-25f139204b50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.072\n",
+      "0.1800000000000006\n",
+      "4.1\n"
+     ]
+    }
+   ],
    "source": [
     "testList = [4.19, 4.03, 4.07, 4.06, 4.01]\n",
     "print(Mean(testList))\n",
     "print(Range(testList))\n",
     "print(Midrange(testList))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16225eae-6d74-4f94-b072-0f2063ba8f3d",
+   "metadata": {},
+   "source": [
+    "## Calculating the factors for each group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18c50b8d-5b40-41d1-8bdd-af37602bd8a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
