--- a/Main.ipynb
+++ b/Main.ipynb
@@ -331,7 +331,16 @@
    "id": "18c50b8d-5b40-41d1-8bdd-af37602bd8a6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Parameters:\n",
+    "#  factors: list of strings of factor to check, same as the key in the dictionary\n",
+    "#  groupDatas: List of datas needed as a list of dictionaries\n",
+    "# Return:\n",
+    "#  leastDiverse: dictionary of {factor1: numOccurences, factor2: numOccurences ... } as string:int\n",
+    "def FindLeastDiverseInTutorialGroup(factors, groupDatas) -> dict:\n",
+    "    leastDiverse = {}\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
